--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,21 +24,14 @@ jobs:
     timeout-minutes: 300
 
     steps:
-      # tag名を変数化
-      - name: Get the version (tag)
-        id: get_version
-        run: |
-          echo "BRANCH=${{ github.ref_name }}" >> $GITHUB_OUTPUT
-          echo ${{ github.ref }}
-          echo $BRANCH
-
-      - name: Set up Go 1.19.2
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19.2
-
       - name: Check out code
         uses: actions/checkout@v3
+
+      - name: Set up Go 1.19.3
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19.3
+          cache: true
 
       - name: Run checks
         uses: golangci/golangci-lint-action@v3
